--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext.kotlin_version = "1.2.0"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "com.android.tools.build:gradle:3.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:4.3.1"
 
@@ -32,8 +32,22 @@ ext {
     ]
 
     dependencies = [
-            "appcompat": "com.android.support:appcompat-v7:26.1.0",
-            "retrofit" : "com.squareup.retrofit2:retrofit:2.3.0"
+            "appcompat"          : "com.android.support:appcompat-v7:26.1.0",
+            "kotlin_stdlib"      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            "constraint"         : "com.android.support.constraint:constraint-layout:1.0.2",
+            "junit"              : "junit:junit:4.12",
+            "test_runner"        : "com.android.support.test:runner:1.0.1",
+            "espresso"           : "com.android.support.test.espresso:espresso-core:3.0.1",
+            "databinding"        : "com.android.databinding:compiler:3.0.1",
+            "design"             : "com.android.support:design:26.1.0",
+            "okhttp3"            : "com.squareup.okhttp3:okhttp:3.8.0",
+            "retrofit"           : "com.squareup.retrofit2:retrofit:2.3.0",
+            "converter_gson"     : "com.squareup.retrofit2:converter-gson:2.3.0",
+            "adapter_rxjava"     : "com.squareup.retrofit2:adapter-rxjava:2.3.0",
+            "logging_interceptor": "com.squareup.okhttp3:logging-interceptor:3.8.0",
+            "rxjava"             : "io.reactivex.rxjava2:rxjava:2.1.8",
+            "rxandroid"          : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "multidex"           : "com.android.support:multidex:1.0.1",
 
     ]
 }
