--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,19 +1,22 @@
 apply plugin: 'com.android.library'
 
 apply plugin: 'realm-android'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 26
 
 
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
+        vectorDrawables.useSupportLibrary = true
+        testInstrumentationRunner rootProject.ext.testInstrumentationRunner
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
 
     buildTypes {
@@ -27,21 +30,28 @@ android {
         enabled true
     }
 
+    kapt {
+        generateStubs = true
+    }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    api 'com.squareup.okhttp3:okhttp:3.8.0'
-    api 'com.squareup.retrofit2:retrofit:2.3.0'
-    api 'com.squareup.retrofit2:converter-gson:2.3.0'
-    api 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    api 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    api 'io.reactivex.rxjava2:rxjava:2.1.8'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api rootProject.ext.dependencies["appcompat"]
+    api rootProject.ext.dependencies["junit"]
+    api rootProject.ext.dependencies["test_runner"]
+    api rootProject.ext.dependencies["espresso"]
+    api rootProject.ext.dependencies["okhttp3"]
+    api rootProject.ext.dependencies["retrofit"]
+    api rootProject.ext.dependencies["converter_gson"]
+    api rootProject.ext.dependencies["adapter_rxjava"]
+    api rootProject.ext.dependencies["logging_interceptor"]
+    api rootProject.ext.dependencies["rxjava"]
+    api rootProject.ext.dependencies["rxandroid"]
+    api rootProject.ext.dependencies["constraint"]
+    api rootProject.ext.dependencies["design"]
+    api rootProject.ext.dependencies["kotlin_stdlib"]
+    kapt "com.android.databinding:compiler:3.0.1"
 //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
 }
 
