--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ ext {
             "rxjava"             : "io.reactivex.rxjava2:rxjava:2.1.8",
             "rxandroid"          : "io.reactivex.rxjava2:rxandroid:2.0.1",
             "multidex"           : "com.android.support:multidex:1.0.1",
+            "swipeBackLayout"    : "me.imid.swipebacklayout.lib:library:1.1.0"
 
     ]
 }
@@ -56,8 +57,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        //Bmob的maven仓库地址--必填
-        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 
