--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     api rootProject.ext.dependencies["constraint"]
     api rootProject.ext.dependencies["design"]
     api rootProject.ext.dependencies["kotlin_stdlib"]
+    api rootProject.ext.dependencies["swipeBackLayout"]
     kapt "com.android.databinding:compiler:3.0.1"
 //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
 }
