--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.syc.framework">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name="com.syc.framework.framework.FrameworkApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="com.syc.framework.framework.FrameworkApplication"
         android:theme="@style/AppTheme">
         <activity android:name="com.syc.acount.view.LoginActivity">
             <intent-filter>
@@ -18,16 +22,19 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.syc.acount.view.RegisterActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.syc.acount.view.RegisterActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.syc.acount.view.AccountsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.syc.acount.view.AccountsActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.syc.acount.view.NewAccountActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.syc.acount.view.NewAccountActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.syc.acount.view.SwipeBackTestActivity"/>
+        <activity android:name="com.syc.acount.view.SwipeBackTestActivity" />
     </application>
 
 </manifest>
