--- a/build.gradle
+++ b/build.gradle
@@ -32,23 +32,28 @@ ext {
     ]
 
     dependencies = [
-            "appcompat"          : "com.android.support:appcompat-v7:26.1.0",
-            "kotlin_stdlib"      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
-            "constraint"         : "com.android.support.constraint:constraint-layout:1.0.2",
-            "junit"              : "junit:junit:4.12",
-            "test_runner"        : "com.android.support.test:runner:1.0.1",
-            "espresso"           : "com.android.support.test.espresso:espresso-core:3.0.1",
-            "databinding"        : "com.android.databinding:compiler:3.0.1",
-            "design"             : "com.android.support:design:26.1.0",
-            "okhttp3"            : "com.squareup.okhttp3:okhttp:3.8.0",
-            "retrofit"           : "com.squareup.retrofit2:retrofit:2.3.0",
-            "converter_gson"     : "com.squareup.retrofit2:converter-gson:2.3.0",
-            "adapter_rxjava"     : "com.squareup.retrofit2:adapter-rxjava:2.3.0",
-            "logging_interceptor": "com.squareup.okhttp3:logging-interceptor:3.8.0",
-            "rxjava"             : "io.reactivex.rxjava2:rxjava:2.1.8",
-            "rxandroid"          : "io.reactivex.rxjava2:rxandroid:2.0.1",
-            "multidex"           : "com.android.support:multidex:1.0.1",
-            "swipeBackLayout"    : "me.imid.swipebacklayout.lib:library:1.1.0"
+            "appcompat"            : "com.android.support:appcompat-v7:26.1.0",
+            "kotlin_stdlib"        : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            "constraint"           : "com.android.support.constraint:constraint-layout:1.0.2",
+            "junit"                : "junit:junit:4.12",
+            "test_runner"          : "com.android.support.test:runner:1.0.1",
+            "espresso"             : "com.android.support.test.espresso:espresso-core:3.0.1",
+            "databinding"          : "com.android.databinding:compiler:3.0.1",
+            "design"               : "com.android.support:design:26.1.0",
+            "okhttp3"              : "com.squareup.okhttp3:okhttp:3.8.0",
+            "retrofit"             : "com.squareup.retrofit2:retrofit:2.3.0",
+            "converter_gson"       : "com.squareup.retrofit2:converter-gson:2.3.0",
+            "adapter_rxjava"       : "com.squareup.retrofit2:adapter-rxjava:2.3.0",
+            "logging_interceptor"  : "com.squareup.okhttp3:logging-interceptor:3.8.0",
+            "rxjava"               : "io.reactivex.rxjava2:rxjava:2.1.8",
+            "rxandroid"            : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "multidex"             : "com.android.support:multidex:1.0.1",
+            "swipeBackLayout"      : "me.imid.swipebacklayout.lib:library:1.1.0",
+            "fresco"               : "com.facebook.fresco:fresco:$kotlin_version",
+            "fresco_animated_gif"  : "com.facebook.fresco:animated-gif:0.14.1",
+            "fresco_webpsupport"   : "com.facebook.fresco:webpsupport:0.14.",
+            "fresco_animated_webp" : "com.facebook.fresco:animated-webp:0.14.1",
+            "imagepipeline_okhttp3": "com.facebook.fresco:imagepipeline-okhttp3:0.14.1"
 
     ]
 }
