--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     api rootProject.ext.dependencies["design"]
     api rootProject.ext.dependencies["kotlin_stdlib"]
     api rootProject.ext.dependencies["swipeBackLayout"]
+    api rootProject.ext.dependencies["fresco"]
+    api rootProject.ext.dependencies["fresco_animated_gif"]
+    api rootProject.ext.dependencies["imagepipeline_okhttp3"]
     kapt "com.android.databinding:compiler:3.0.1"
 //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
 }
