--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
     kapt {
         generateStubs = true
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/kotlin/'] } }
 }
 
 dependencies {
