Router 实现广播功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:screenOrientation="portrait" />
 
         <activity android:name="com.syc.acount.view.SwipeBackTestActivity" />
+
+        <activity android:name="com.example.business.view.BusinessMainActivity"/>
     </application>
 
 </manifest>
