--- a/acount/build.gradle
+++ b/acount/build.gradle
@@ -17,6 +17,16 @@ android {
     }
 
     buildTypes {
+        dev {
+
+        }
+
+        debug{
+
+        }
+        pre{
+
+        }
         release {
             postprocessing {
                 removeUnusedCode false
