--- a/acount/build.gradle
+++ b/acount/build.gradle
@@ -18,14 +18,14 @@ android {
 
     buildTypes {
         dev {
-
+            minifyEnabled false
         }
 
         debug{
-
+            minifyEnabled false
         }
         pre{
-
+            minifyEnabled false
         }
         release {
             postprocessing {
@@ -55,7 +55,7 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api project(':framework')
+    api project(':common')
     kapt "com.android.databinding:compiler:3.0.1"
 }
 repositories {
