--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -22,14 +22,14 @@ android {
 
     buildTypes {
         dev {
-
+            minifyEnabled false
         }
 
         debug{
-
+            minifyEnabled false
         }
         pre{
-
+            minifyEnabled false
         }
         release {
             minifyEnabled false
@@ -52,20 +52,7 @@ dependencies {
     api rootProject.ext.dependencies["junit"]
     api rootProject.ext.dependencies["test_runner"]
     api rootProject.ext.dependencies["espresso"]
-    api rootProject.ext.dependencies["okhttp3"]
-    api rootProject.ext.dependencies["retrofit"]
-    api rootProject.ext.dependencies["converter_gson"]
-    api rootProject.ext.dependencies["adapter_rxjava"]
-    api rootProject.ext.dependencies["logging_interceptor"]
-    api rootProject.ext.dependencies["rxjava"]
-    api rootProject.ext.dependencies["rxandroid"]
-    api rootProject.ext.dependencies["constraint"]
-    api rootProject.ext.dependencies["design"]
-    api rootProject.ext.dependencies["kotlin_stdlib"]
     api rootProject.ext.dependencies["swipeBackLayout"]
-    api rootProject.ext.dependencies["fresco"]
-    api rootProject.ext.dependencies["fresco_animated_gif"]
-    api rootProject.ext.dependencies["imagepipeline_okhttp3"]
     kapt "com.android.databinding:compiler:3.0.1"
 //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
 }
