--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.syc.demo.view.MainActivity">
+        <activity android:name="com.syc.entry.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
