--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':framework', ':acount', ':business', ':common'
+include ':app', ':framework', ':acount', ':business', ':common', ':entry'
