--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.2.0"
+    ext.kotlin_version = "1.2.51"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.0.1"
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:4.3.1"
 
@@ -19,12 +19,12 @@ buildscript {
 ext {
 
     android = [
-            compileSdkVersion = 26,
-            targetSdkVersion = 26,
+            compileSdkVersion = 28,
+            targetSdkVersion = 28,
             minSdkVersion = 15,
             versionCode = 1,
             versionName = "1.0.0",
-            buildToolsVersion = "26.0.2",
+            buildToolsVersion = "27.0.0",
             multiDexEnabled = true,
             applicationId = "com.syc.framwork.sycframework",
             testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner",
@@ -43,13 +43,13 @@ ext {
             "okhttp3"              : "com.squareup.okhttp3:okhttp:3.8.0",
             "retrofit"             : "com.squareup.retrofit2:retrofit:2.3.0",
             "converter_gson"       : "com.squareup.retrofit2:converter-gson:2.3.0",
-            "adapter_rxjava"       : "com.squareup.retrofit2:adapter-rxjava:2.3.0",
+            "adapter_rxjava"       : "com.squareup.retrofit2:adapter-rxjava2:2.3.0",
             "logging_interceptor"  : "com.squareup.okhttp3:logging-interceptor:3.8.0",
             "rxjava"               : "io.reactivex.rxjava2:rxjava:2.1.8",
             "rxandroid"            : "io.reactivex.rxjava2:rxandroid:2.0.1",
             "multidex"             : "com.android.support:multidex:1.0.1",
             "swipeBackLayout"      : "me.imid.swipebacklayout.lib:library:1.1.0",
-            "fresco"               : "com.facebook.fresco:fresco:$kotlin_version",
+            "fresco"               : "com.facebook.fresco:fresco:1.2.0",
             "fresco_animated_gif"  : "com.facebook.fresco:animated-gif:0.14.1",
             "fresco_webpsupport"   : "com.facebook.fresco:webpsupport:0.14.",
             "fresco_animated_webp" : "com.facebook.fresco:animated-webp:0.14.1",
@@ -58,11 +58,12 @@ ext {
             "smart_refresh_header" : "com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-5",
             "leakcanary"           : "com.squareup.leakcanary:leakcanary-android:1.5",
             "leakcanary_no_op"     : "com.squareup.leakcanary:leakcanary-android-no-op:1.5",
-
+            "glide"                : "com.github.bumptech.glide:glide:4.7.1",
+            "glide_compiler"        :"com.github.bumptech.glide:compiler:4.7.1",
     ]
 
     urls = [
-            url_dev = "\"http://www.dev.com\"",
+            url_dev = "\"http://39.106.130.88:8080/Record/\"",
             url_test = "\"http://www.test.com\"",
             url_pre = "\"http://www.pre.com\"",
             url_online = "\"http://www.online.com\"",
