--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,11 +5,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 26
-
-
-
     defaultConfig {
+        compileSdkVersion rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -68,7 +65,7 @@ dependencies {
     api rootProject.ext.dependencies["imagepipeline_okhttp3"]
     api rootProject.ext.dependencies["smart_refresh_layout"]
     api rootProject.ext.dependencies["smart_refresh_header"]
-    kapt "com.android.databinding:compiler:3.1.3"
+//    kapt rootProject.ext.dependencies["databinding"]
     //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
     kapt rootProject.ext.dependencies["glide_compiler"]
     api (rootProject.ext.dependencies["glide"]){
