--- a/entry/build.gradle
+++ b/entry/build.gradle
@@ -4,9 +4,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
 android {
-    compileSdkVersion 26
 
     defaultConfig {
+        compileSdkVersion rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -56,7 +56,6 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':common')
-    kapt "com.android.databinding:compiler:3.1.3"
 }
 repositories {
     mavenCentral()
