--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -5,11 +5,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 26
-
-
-
     defaultConfig {
+        compileSdkVersion rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -53,7 +50,7 @@ dependencies {
     api rootProject.ext.dependencies["test_runner"]
     api rootProject.ext.dependencies["espresso"]
     api rootProject.ext.dependencies["swipeBackLayout"]
-    kapt "com.android.databinding:compiler:3.1.3"
+    kapt rootProject.ext.dependencies["databinding"]
 //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
 }
 
