新增glide加载图片实现

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     api rootProject.ext.dependencies["imagepipeline_okhttp3"]
     api rootProject.ext.dependencies["smart_refresh_layout"]
     api rootProject.ext.dependencies["smart_refresh_header"]
-    //    kapt rootProject.ext.dependencies["databinding"]
+    kapt rootProject.ext.dependencies["databinding"]
     //    compile 'cn.bmob.android:bmob-sdk:3.5.0'
     kapt rootProject.ext.dependencies["glide_compiler"]
     api(rootProject.ext.dependencies["glide"]) {
