--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,8 @@ ext {
             "leakcanary_no_op"     : "com.squareup.leakcanary:leakcanary-android-no-op:1.5",
             "glide"                : "com.github.bumptech.glide:glide:4.7.1",
             "glide_compiler"       : "com.github.bumptech.glide:compiler:4.7.1",
+            "glide_transformations": "jp.wasabeef:glide-transformations:3.3.0",
+            "glide_gpuimage"       : "jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1",
             "mvvm_framework"       : "com.syc.mvvm:framework:1.0.0",
     ]
 
