--- a/acount/src/main/AndroidManifest.xml
+++ b/acount/src/main/AndroidManifest.xml
@@ -1,6 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.syc.acount" >
-    <application>
-
-    </application>
-</manifest>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest package="com.syc.acount"></manifest>
