--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.syc.framework">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name="com.syc.entry.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.syc.acount.view.LoginActivity"/>
+        <activity android:name="com.syc.acount.view.LoginActivity"
+            android:theme="@style/LoginActivityTheme"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name="com.syc.acount.view.RegisterActivity"
@@ -34,9 +39,7 @@
         <activity
             android:name="com.syc.acount.view.NewAccountActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name="com.syc.acount.view.SwipeBackTestActivity" />
-
+        
         <activity android:name="com.example.business.view.BusinessMainActivity">
             <intent-filter>
                 <action android:name="com.syc.business.open" />
@@ -50,6 +53,7 @@
                     android:scheme="http"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
