--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name="com.syc.acount.view.NewAccountActivity"
             android:screenOrientation="portrait" />
 
+
+        <service android:name="com.syc.framework.im.IMService"/>
+
         <activity android:name="com.example.business.view.BusinessMainActivity">
             <intent-filter>
                 <action android:name="com.syc.business.open" />
