--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.syc.acount.view.LargeImageActivity"/>
+
     </application>
 
 </manifest>
