--- a/acount/build.gradle
+++ b/acount/build.gradle
@@ -12,8 +12,8 @@ android {
         compileSdkVersion rootProject.ext.compileSdkVersion
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
+//        versionCode rootProject.ext.versionCode
+//        versionName rootProject.ext.versionName
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner rootProject.ext.testInstrumentationRunner
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
