--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,11 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m
-org.gradle.daemon=false
+#org.gradle.daemon=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+BUILD_TYPE=debug
+VERSION_CODE=1
+VERSION_NAME=1.0.0.2
